# ogit-python-library

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
src/arago/ogit/: __init__.py  data.py  enum.py  utils.py  version.py
src/arago/ontology/: __init__.py  dc.py  qname.py  utils.py
tests/: test_ogit.py  test_ontology.py
tools/: convert.sh  python.xslt
