[metadata]
name = ogit_python_library
# version = https://github.com/pypa/setuptools_scm/#setupcfg-usage
url = https://github.com/166MMX/ogit-python-library
description = OGIT Python Library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
python = 3.8
keywords = python3
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find_namespace:
setup_requires = setuptools_scm
python_requires = >=3.8

[options.packages.find]
where = src
